middle section complete

--- a/Frontend/Pages/homepage.html
+++ b/Frontend/Pages/homepage.html
@@ -43,19 +43,19 @@
                         <p>Joshephine </p>
                     </div>
                     <div class="user-info">
-                        <div class="icon-wrapper exlpore"><i class="fa-solid fa-tv"></i></div>
+                        <div class="icon-wrapper exlpore"><i style="color:#0d81eefa" class="fa-solid fa-tv"></i></div>
                         <p>Wacth </p>
                     </div>
                     <div class="user-info">
-                        <div class="icon-wrapper exlpore"><i class="fa-regular fa-calendar-minus"></i></div>
+                        <div class="icon-wrapper exlpore"><i style="color:rgb(255, 116, 146);" class="fa-regular fa-calendar-minus"></i></div>
                         <p>Events </p>
                     </div>
                     <div class="user-info">
-                        <div class="icon-wrapper exlpore"><i class="fa-solid fa-user-group"></i></div>
+                        <div class="icon-wrapper exlpore"><i style="color:#0d81eefa" class="fa-solid fa-user-group"></i></div>
                         <p>Freinds</p>
                     </div>
                     <div class="user-info">
-                        <div class="icon-wrapper exlpore"><i class="fa-solid fa-clock-rotate-left"></i></div>
+                        <div class="icon-wrapper exlpore"><i style="color:#0d81eefa" class="fa-solid fa-clock-rotate-left"></i></div>
                         <p>Memories</p>
                     </div>
                     <div class="box"><p>See More &nbsp;</p><i class="fa-solid fa-angle-down"></i></div>
@@ -104,27 +104,29 @@
                             </div>
                             <textarea  placeholder="What's on your mind Joshephine"></textarea>
                             <div class="own-post-actions" >
-                            <p><i class="fa-solid fa-photo-film"></i> Photos/Videos</p>
-                            <p><i class="fa-solid fa-user-plus"></i> Tag freinds </p>
-                            <p><i class="fa-regular fa-face-smile"></i>Feelings/activities</p>
+                            <p><i style="color: rgb(0, 255, 21);" class="fa-solid fa-photo-film"></i> Photos/Videos</p>
+                            <p><i style="color: #0d81eefa;"class="fa-solid fa-user-plus"></i> Tag freinds </p>
+                            <p><i style="color: rgb(255, 217, 0);" class="fa-regular fa-face-smile"></i>Feelings/activities</p>
                             </div>
                         </section>
                     <section class="freind-posts">
                         <div class="top">
                             <div class="name-time">
-                                <div class="user-info">
+                                <div style="display: flex;align-items: center;">
                                     <div class="img-wrapper"><img  src="../Images/download.jfif"></div> 
-                                    <p>Joshephine </p>
-                                 </div>
-                                 <div style="display: flex;">
-                                    <p>5hr</p>
-                                    <i class="fa-solid fa-user-group"></i>
+                                </div>
+                                <div>
+                                    <p>Joshephine</p>
+                                    <div style="display: flex; align-items: center;"> 
+                                        <p style="font-size: 10px;">5hr</p>
+                                        <i style="font-size: 10px;"    class="fa-solid fa-user-group"></i>
+                                  </div>
                                 </div>
                             </div>
-                            <div class="icon-wrapper"><i class="fa-solid fa-ellipsis"></i></div>
+                            <div  style="background-color:  #f8f7f7;;"  class="icon-wrapper post"><i class="fa-solid fa-ellipsis"></i></div>
                         </div>
-                        <div clas="middle">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce tempus velit at lacus</p>
+                        <div class="middle">
+                            <p style="padding: 5px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce tempus velit at lacus</p>
                             <img src="../Images/download (3).jfif">
                     </div>
                     <div class="freind-post-actions">
